--- a/src/app/page-header/page-header.component.html
+++ b/src/app/page-header/page-header.component.html
@@ -55,7 +55,7 @@
               <li><a href="/service-web">Web & App Development</a></li>
               <li><a href="/service-marketing">Digital Marketing</a></li>
               <li><a href="/service-content">Creative Content</a></li>
-              <li><a href="/case-studies">Case Studies</a></li>
+              <!-- <li><a href="/case-studies">Case Studies</a></li> -->
             </ul>
           </li>
       </nav>
@@ -98,7 +98,9 @@
               <a href="#">Company</a>
               <ul class="dp-menu first">
                 <li class="container large d-flex ">
-                  <div><img src="assets/imgs/gallery/img-s-32.webp" ></div>
+                  <div><a href="/service-content">
+  <img src="assets/imgs/gallery/page-header1.png" alt="">
+</a></div>
                   <div style="width: 50px;"></div>
                   <div>
                     <li><a href="/about">About</a></li>
@@ -115,13 +117,15 @@
               <a href="#">Solutions</a>
               <ul class="dp-menu">
                 <li class="container large d-flex ">
-                  <div><img src="assets/imgs/gallery/img-s-32.webp" ></div>
+                 <a href="/service-web">
+  <img src="assets/imgs/gallery/page-header2.png" alt="">
+</a>
                   <div style="width: 50px;"></div>
                   <div>
                     <li><a href="/service-web">Web & App Development</a></li>
                     <li><a href="/service-marketing">Digital Marketing</a></li>
                     <li><a href="/service-content">Creative Content</a></li>
-                    <li><a href="/case-studies">Case Studies</a></li>
+                    <!-- <li><a href="/case-studies">Case Studies</a></li> -->
                   </div>
                 </li>
                 
