--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -139,7 +139,9 @@
                 <a href="#">Solutions</a>
                 <ul class="dp-menu">
                   <li class="container large d-flex ">
-                    <div><img src="assets/imgs/gallery/page-header2.png" ></div>
+                    <a href="/service-web">
+  <img src="assets/imgs/gallery/page-header2.png" alt="">
+</a>
                     <div style="width: 50px;"></div>
                     <div>
                       <li><a href="/service-web">Web & App Development</a></li>
