--- a/src/app/page-footer/page-footer.component.html
+++ b/src/app/page-footer/page-footer.component.html
@@ -50,7 +50,7 @@
     <div class="copyright-area-inner">
       <div class="row">
         <div class="col-lg-5">
-          <p class="text-white-transparent text-small">© 2025 | Alrights reserved </p>
+          <p class="text-white-transparent text-small">© 2025 Nestor Professional Services. All rights reserved.</p>
         </div>
         <div class="col-lg-7">
           <div class="d-flex flex-wrap justify-content-end">
