--- a/src/app/page-header/page-header.component.html
+++ b/src/app/page-header/page-header.component.html
@@ -104,13 +104,13 @@
 
                       <div class="featured-grid">
                         <a href="/service-content" >
-                          <img src="assets/imgs/gallery/page-header1.png" alt="">
+                          <img src="assets/imgs/nestor-new/blog-image-1.png" alt="">
                           <div class="desc">Why Google Ads is Essential for SME</div>
                           <span class="pill">5 min read</span>
                         </a>
 
                         <a href="/service-content">
-                          <img src="assets/imgs/gallery/page-header1.png" alt="">
+                          <img src="assets/imgs/nestor-new/blog-image-2.png" alt="">
                           <div class="desc">SEO vs Paid Ads</div>
                           <span class="pill">5 min read</span>
                         </a>
@@ -167,16 +167,16 @@
                       <div class="menu-title">Let's Build Someting Together</div>
 
                       <div class="featured-grid-2">
-                        <a href="/service-content" >
+                        <a href="/contact" >
                           <img src="assets/imgs/gallery/page-header1.png" alt="">
                           <div class="desc">Talk to our team and get a clear direction for your web, marketing or content needs</div>
                           
                         </a>  
                       </div>
 
-                      <a href="/blog" class="featured-btn">Contact Us →</a>
+                      <a href="/contact" class="featured-btn">Contact Us →</a>
                     </div>
-                  <!-- <div style="width: 50px;"></div> -->
+                  <div style="width: 50px;"></div> 
                   <div  class="solutions-grid">
                     <div>
                      <div class="menu-title">Web & App Development</div>
