--- a/src/app/service-marketing/service-marketing.component.html
+++ b/src/app/service-marketing/service-marketing.component.html
@@ -134,8 +134,9 @@
                       <img class="show-light" src="assets/imgs/icon/icon-s-4.webp" alt="service-icon">
                       <img class="show-dark" src="assets/imgs/icon/icon-s-4-light.webp" alt="service-icon">
                     </div>
-                    <h2 class="title">SEO (Search Engine Optimization)</h2>
-                    <p>Get your website to the top of Google and stay there with keywords, backlinks, and technical optimization.</p>
+                    <h2 class="title">AI Search Optimization</h2>
+                    <p>AI Search Optimization
+Optimize your brand to be discoverable across modern AI-powered search platforms, smart assistants, and next-gen search experiences.</p>
                   </div>
                 </div>
               </div>
@@ -147,7 +148,7 @@
             <div class="container large">
               <div class="process-area-inner section-spacing">
                 <div class="shape-1">
-                  <img class="show-light" src="assets/imgs/nestor-new/anniversary.png" alt="image">
+                  <img class="show-light" src="assets/imgs/nestor-new/why-choose.png" alt="image">
                 </div>
                 <div class="section-header">
                   <div class="section-title-wrapper">
