--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -948,6 +948,15 @@ input::placeholder {
   margin: 0;
 }
 
+  .featured-grid-2 img {
+  width: 100%;
+  height: 160px;
+  object-fit: cover;
+  border-radius: 10px;
+  display: block;
+  margin: 0;
+}
+
 }
 
 .pill {
