--- a/src/app/page-header/page-header.component.scss
+++ b/src/app/page-header/page-header.component.scss
@@ -41,10 +41,20 @@
     gap: 16px;
   }
   .featured-grid-2 {
+
     display: grid;
     grid-template-columns: 1fr;
     gap: 16px;
   }
+
+  .featured-grid-2 img {
+  width: 100%;
+  height: 160px;
+  object-fit: cover;
+  border-radius: 10px;
+  display: block;
+  margin: 0;
+}
 
 .featured-grid img {
   width: 100%;
