--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -259,22 +259,22 @@
                      <div class="menu-title">Creative Content</div>
 
                     <li>
-                    <a href="/service-marketing">
+                    <a href="/service-content">
                       <span class="title">Commercial Videos</span>
                     </a>
                   </li>
                    <li>
-                    <a href="/service-marketing">
+                    <a href="/service-content">
                       <span class="title">Production</span>
                     </a>
                   </li>
                    <li>
-                    <a href="/service-marketing">
+                    <a href="/service-content">
                       <span class="title">Editing & Enchancement</span>
                     </a>
                   </li>
                    <li>
-                    <a href="/service-marketing">
+                    <a href="/service-content">
                       <span class="title">Delivery & Optimization</span>
                     </a>
                   </li>
