--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -410,7 +410,7 @@ body {
     // background-color: unset;
     padding-bottom: 0px;
     background-image: url('../../assets/imgs/nestor-new/background-1.png');
-    background-size: contain;
+    background-size: cover;
     background-repeat: repeat;
 }
 
@@ -779,7 +779,7 @@ body {
 
 .blog .thumb a img {
     object-fit: cover;
-    height: 300px;
+    height: 260px;
 }
 
 .blog .thumb .blog-background {
