--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -392,11 +392,11 @@
             <div class="container large">
               <div class="work-area-inner section-spacing">
                 <div class="section-header">
-                  <div class="section-title-wrapper">
+                  <!-- <div class="section-title-wrapper"> -->
                     <div class="title-wrapper">
                       <h2 class="section-title">What We've Crafted</h2>
                     </div>
-                  </div>
+                  <!-- </div> -->
                   <div class="content-last">
                     
                   </div>
@@ -513,7 +513,8 @@
             <div class="fun-fact-background">
               <div class="container large">
                 <div class="fun-fact-area-inner section-spacing">
-                  <div class="fun-fact-area-height"></div>
+                  <div class="fun-fact-area-height">
+                  </div>
                 </div>
               </div>
             </div>
@@ -682,6 +683,11 @@
                       <div class="swiper-slide">
                         <div class="client-box">
                           <img src="assets/imgs/nestor-new/brand-5.png" alt="client image">
+                        </div>
+                      </div>
+                       <div class="swiper-slide">
+                        <div class="client-box">
+                          <img src="assets/imgs/nestor-new/brand-6.png" alt="client image">
                         </div>
                       </div>
                     </div>
