--- a/src/app/service-content/service-content.component.html
+++ b/src/app/service-content/service-content.component.html
@@ -190,7 +190,7 @@
             <div class="container">
               <div class="section-title-box">
                 <div class="section-title-wrapper">
-                  <div class="title-wrapper">
+                    <div class="title-wrapper" style="justify-content:start">
                     <h1 class="section-title has_fade_anim" data-on-scroll="0">Our Creative <br>
                       Process</h1>
                   </div>
