--- a/src/app/service-marketing/service-marketing.component.html
+++ b/src/app/service-marketing/service-marketing.component.html
@@ -191,9 +191,9 @@ Optimize your brand to be discoverable across modern AI-powered search platforms
             <div class="container">
               <div class="section-title-box">
                 <div class="section-title-wrapper">
-                  <div class="title-wrapper">
+                    <div class="title-wrapper" style="justify-content:start">
                     <h1 class="section-title has_fade_anim" data-on-scroll="0">Our Marketing <br>
-                      Developmenet</h1>
+                      Development</h1>
                   </div>
                 </div>
               </div>
