--- a/src/app/service-web/service-web.component.html
+++ b/src/app/service-web/service-web.component.html
@@ -190,9 +190,9 @@
             <div class="container">
               <div class="section-title-box">
                 <div class="section-title-wrapper">
-                  <div class="title-wrapper">
+                  <div class="title-wrapper" style="justify-content:start">
                     <h1 class="section-title has_fade_anim" data-on-scroll="0">Our Process <br>
-                      Developmenet</h1>
+                      Development</h1>
                   </div>
                 </div>
               </div>
